--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
-  <title>Stencil Component Starter</title>
-  <script src="/build/mycomponent.js"></script>
+  <title>Typing Carousel Demo</title>
+  <script src="/build/diggs-typing-carousel.js"></script>
 
 </head>
 <body>
 
-  <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+  <h1>Here is my awesome list of <diggs-typing-carousel text-list='[ "gizmos.", "widgets.", "thingamajigs!"  ]'/></h1>
 
 </body>
 </html>
